[gd_scene load_steps=2 format=2]

[ext_resource path="res://nodes/tag_match/inspector.gd" type="Script" id=1]

[node name="TagMatchType" type="ScrollContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 246.0
margin_bottom = 220.0
script = ExtResource( 1 )

[node name="TagMatch" type="VBoxContainer" parent="."]
margin_right = 239.0
margin_bottom = 213.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Character" type="VBoxContainer" parent="TagMatch"]
margin_right = 239.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="TagMatch/Character"]
margin_right = 239.0
margin_bottom = 14.0
text = "Character: "

[node name="Filterable" type="HBoxContainer" parent="TagMatch/Character"]
margin_top = 18.0
margin_right = 239.0
margin_bottom = 38.0

[node name="Selection" type="OptionButton" parent="TagMatch/Character/Filterable"]
margin_right = 223.0
margin_bottom = 20.0
size_flags_horizontal = 3
clip_text = true

[node name="GlobalFilters" type="Button" parent="TagMatch/Character/Filterable"]
margin_left = 227.0
margin_right = 239.0
margin_bottom = 20.0
hint_tooltip = "Apply Global Filters

It will follow the same listing instructions
that are defined in the Characters inspector.
+ Current character of the node is always listed."
toggle_mode = true
text = "ï‚°"

[node name="TagKey" type="VBoxContainer" parent="TagMatch"]
margin_top = 42.0
margin_right = 239.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="TagMatch/TagKey"]
margin_right = 239.0
margin_bottom = 14.0
text = "Tag Key: "

[node name="LineEdit" type="LineEdit" parent="TagMatch/TagKey"]
margin_top = 18.0
margin_right = 239.0
margin_bottom = 42.0
size_flags_horizontal = 3
placeholder_text = "Required & non-blank"

[node name="PatternsLabel" type="Label" parent="TagMatch"]
margin_top = 88.0
margin_right = 239.0
margin_bottom = 102.0
text = "Patterns:"

[node name="Pattern" type="HBoxContainer" parent="TagMatch"]
margin_top = 106.0
margin_right = 239.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="LineEdit" parent="TagMatch/Pattern"]
margin_right = 211.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Type in New Pattern"
placeholder_alpha = 0.3

[node name="Tools" type="MenuButton" parent="TagMatch/Pattern"]
margin_left = 215.0
margin_right = 239.0
margin_bottom = 24.0
size_flags_vertical = 3
text = "..."
flat = false
items = [ "{ tools'll be loaded by script }", null, 0, false, false, 0, 0, null, "", false ]

[node name="Patterns" type="ScrollContainer" parent="TagMatch"]
margin_top = 134.0
margin_right = 239.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="List" type="ItemList" parent="TagMatch/Patterns"]
margin_right = 239.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "{patterns here}", null, false ]
select_mode = 1
allow_rmb_select = true

[node name="RegEx" type="CheckBox" parent="TagMatch"]
margin_top = 189.0
margin_right = 239.0
margin_bottom = 213.0
hint_tooltip = "None-Playable TagMatchues will act like randomized replies."
text = "RegEx"
